# ballotpaper

./: README.md
contract/: Cargo.toml
contract/src/: lib.rs
web/: package.json
web/public/: index.html
web/src/: App.js  index.css
